--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
 <html>
 <head></head>
     <body> <h1>This is a Header</h1>
-    <p>This is a paragraph</p></body>
+    <p>This is a paragraph</p><p>This is a second paragraph</p></body>
 </html>
