--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <head></head>
     <body> <h1>This is a Header</h1>
-    <p>This is a paragraph</p></body>
+    <p>This is a paragraph</p>
+    <p>This is second paragraph</p>
+    <p>This is third paragraph</p></body>
 </html>
